--- a/_posts/projetos/2013-04-11-Projeto-X.md
+++ b/_posts/projetos/2013-04-11-Projeto-X.md
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: PCB in a Box
+title: Projeto X
 tags: [pcb, Projetos, Social, Cadeirantes, Mobilidade, Portadores deficiência]
 categories: [Projetos, Social]
 excerpt: Projeto OpenHardware desenvolvido na Comunidade Arduino-CE de forma colaborativa via Internet, o objetivo deste projeto é criar um hardware e firmware com Arduino (UNO, MEGA e DUE em cada fase) para apresentação na "Mostra Nacional de Robotica", o projeto ainda está sendo discutido e este espaço será usado para condensar a modelagem do projeto, este projeto será renomeado quando este tiver sido definido o hardware.
