Adicionado página para projetos. separado o menu topo da direita para seu proprio arquivo.

--- a/_posts/projetos/2013-04-11-Projeto-X.md
+++ b/_posts/projetos/2013-04-11-Projeto-X.md
@@ -6,6 +6,7 @@ categories: [Projetos, Social, Uno, Mega, Due]
 excerpt: Projeto OpenHardware desenvolvido na Comunidade Arduino-CE de forma colaborativa via Internet, o objetivo deste projeto é criar um hardware e firmware com Arduino (UNO, MEGA e DUE em cada fase) para apresentação na "Mostra Nacional de Robotica", o projeto ainda está sendo discutido e este espaço será usado para condensar a modelagem do projeto, este projeto será renomeado quando este tiver sido definido o hardware.
 author: Carlos Delfino (@carlosdelfino)
 projecturl: https://github.com/Arduino-CE/Malabares-Digital
+projectpost: true
 ---
 
 Este projeto foi proposto no Grupo Arduino CE por mim, e está aberto a participação de qualquer comunidade.
