adicionado imagem do Arduino Day Oficial

--- a/_posts/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/2014-03-14-Arduino-Day-2014.md
@@ -6,4 +6,8 @@ categories: [Eventos]
 excerpt: Arduino Day 2014, participe
 author: Carlos Delfino
 ---
+<a href="http://www.arduinoday.it">
+  <img border="0" alt="Arduino Day 2014" align="left"
+    src="http://day.arduino.cc/wp-content/themes/arduinoWide/arduinoday/banners/ARDUINODAY_200x400.png" />
+</a>
 Preparando para o Arduino DAY 2014
