mudança na organização dos arquivos, mais texto

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -1,8 +1,8 @@
 ---
 layout: article
 title: Arduino Day 2014
-tags: [Eventos, Encontro, Arduino, ArduinoDay, Day]
-categories: [Eventos]
+tags: [Eventos, Encontro, Arduino, ArduinoDay, Day, Aniverário]
+categories: [Eventos. ArduinoDay]
 excerpt: Arduino Day 2014, participe
 author: Carlos Delfino
 ---
@@ -10,9 +10,21 @@ author: Carlos Delfino
   <img border="0" alt="Arduino Day 2014" align="left"
     src="http://day.arduino.cc/wp-content/themes/arduinoWide/arduinoday/banners/ARDUINODAY_200x400.png" />
 </a>
-Preparando para o Arduino DAY 2014
+## Preparando para o Arduino DAY 2014
+
+ * Apresentação do Arduino
+ * Exemplos de projetos
+ * Curso Prático (Hello World Arduino = http://fb.me/HelloWorldArduin)
+ * Oficinas com os participantes (Hands-On)
+
+
 
 ===
+## Parceiros
+
+===
+## Mais Eventos do Arduino Day em Minas Gerais
+
 Se você está organizando o Arduino Day 2014 em sua cidade ou instituição, nos envie informações para que possamos publicar aqui também.
 
 
