correção da categoria.

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -2,7 +2,7 @@
 layout: article
 title: Arduino Day 2014
 tags: [Eventos, Encontro, Arduino, ArduinoDay, Day, Aniverário]
-categories: [Eventos. ArduinoDay]
+categories: [Eventos, ArduinoDay]
 excerpt: Arduino Day 2014, participe
 author: Carlos Delfino
 ---
