correção do link do Curso Hello World Arduino

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -14,10 +14,8 @@ author: Carlos Delfino
 
  * Apresentação do Arduino
  * Exemplos de projetos
- * Curso Prático (Hello World Arduino = http://fb.me/HelloWorldArduin)
+ * Curso Prático (<a href="http://fb.me/HelloWorldArduino">Hello World Arduino</a>)
  * Oficinas com os participantes (Hands-On)
-
-
 
 ===
 ## Parceiros
