Lista de itens doados pela Arduino Omega adiconado.

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -34,6 +34,11 @@ Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a 
 
 ### Lista dos itens
 
+ * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=56">02 - módulos transceiver 2,4GHZ - Doado pela Arduino Omega</a>
+ * <a href="http://arduinomega.com.br/index.php?route=product/product&path=18&product_id=60">01 - Display Nokia 5110 - Doado pela Arduino Omega</a>
+ * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=72">01 Par - Módulo RF 433MHZ(emissor + receptor) - Doado pela Arduino Omega</a>
+ * <a href="http://arduinomega.com.br/index.php?route=product/product&path=20_71&product_id=52">01 - Arduino Mega 2560 R3 - Doado pela Arduino Omega</a>
+ * <a href="http://arduinomega.com.br/index.php?route=product/product&product_id=57">01 - Protoboarde 2860 pontos, com uma pequena avaria. - Doado pela Arduino Omega</a>
 
 ===
 ## Parceiros
