--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -35,6 +35,12 @@ Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a 
 
 ### Lista dos itens
 
+ * 1 Kit Arduino - Doado pelo Edwaldo, membro do Arduino Minas.
+ 
+ * 1 Arduino UNO - Doado pelo Claudio Olmedo do Arduino Paraguay. (os demais arduinos serão usados nas oficinas)
+ * 2 Shields LCD - Doado pelo Claudio Olmedo do Arduino Paraguay. 
+
+ 
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=56">02 - módulos transceiver 2,4GHZ - Doado pela Arduino Omega</a>
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=18&product_id=60">01 - Display Nokia 5110 - Doado pela Arduino Omega</a>
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=72">01 Par - Módulo RF 433MHZ(emissor + receptor) - Doado pela Arduino Omega</a>
