Adicionado o evento do Labiras.

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -3,16 +3,15 @@ layout: article
 title: Arduino Day 2014
 tags: [Eventos, Encontro, Arduino, ArduinoDay, Day, Aniverário]
 categories: [Eventos, ArduinoDay]
-excerpt: Arduino Day 2014, participe
+excerpt: Arduino Day 2014, participe!!!
 author: Carlos Delfino
 ---
+# Atenção faça sua inscrição no link: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
+Apenas os inscritos no link acima terão direito ao sorteio.
 <a href="http://www.arduinoday.it">
   <img border="0" alt="Arduino Day 2014" align="left"
     src="http://day.arduino.cc/wp-content/themes/arduinoWide/arduinoday/banners/ARDUINODAY_200x400.png" />
 </a>
-
-# Atenção faça sua inscrição no link: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
-Apenas os inscritos no link acima terão direito ao sorteio.
 
 O Sorteio  será feito pelo Arduno UNO através de um algoritimo de geração randômica que irá selecionar em um array os códigos dos incritos, e apresentado em um LCD.
 
@@ -57,6 +56,8 @@ Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a 
 ===
 ## Mais Eventos do Arduino Day em Minas Gerais
 ## Mais Arduino Day no Brasil
+ * <a href="http://www5.ifpi.edu.br/index.php?option=com_content&view=article&id=2673">Arduino Day no Labiras em Terezinha/Piauí</a>
+   Este é de arrebendar, o Labiras, é um alaboratório de inteligência artificial do Instituto Federal do Piauí.
 
 ===
 Se você está organizando o Arduino Day 2014 em sua cidade ou instituição, nos envie informações para que possamos publicar aqui também.
