introdução do que é o Arduino Day

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -3,7 +3,7 @@ layout: article
 title: Arduino Day 2014
 tags: [Eventos, Encontro, Arduino, ArduinoDay, Day, Aniverário]
 categories: [Eventos, ArduinoDay]
-excerpt: Arduino Day 2014, participe!!!
+excerpt: Arduino Day 2014, participe, comermore os 10 anos do Arduino!!!
 author: Carlos Delfino
 ---
 # Atenção faça sua inscrição no link: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
@@ -16,6 +16,9 @@ Apenas os inscritos no link acima terão direito ao sorteio.
 O Sorteio  será feito pelo Arduno UNO através de um algoritimo de geração randômica que irá selecionar em um array os códigos dos incritos, e apresentado em um LCD.
 
 Repetindo o link para inscrição e participação no evento: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
+
+## O que é o Arduino Day
+O Arduino Day é um evento promovido pela comunidade Arduino em todo o mundo para comemorar os 10 anos da criação do Arduino.
 
 ## Programação do Arduino Day 2014 em Belo Horizonte
 
