Atualizado agenda do evento, detalhes de oficinas.

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -6,31 +6,29 @@ categories: [Eventos, ArduinoDay]
 excerpt: Arduino Day 2014, participe, comermore os 10 anos do Arduino!!!
 author: Carlos Delfino
 ---
-# Atenção faça sua inscrição no link: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
-Apenas os inscritos no link acima terão direito ao sorteio.
-<a href="http://www.arduinoday.it">
+<a href="http://day.arduinoday.cc">
   <img border="0" alt="Arduino Day 2014" align="left"
     src="http://day.arduino.cc/wp-content/themes/arduinoWide/arduinoday/banners/ARDUINODAY_200x400.png" />
 </a>
-
-O Sorteio  será feito pelo Arduno UNO através de um algoritimo de geração randômica que irá selecionar em um array os códigos dos incritos, e apresentado em um LCD.
-
-Repetindo o link para inscrição e participação no evento: <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a>
 
 ## O que é o Arduino Day
 O Arduino Day é um evento promovido pela comunidade Arduino em todo o mundo para comemorar os 10 anos da criação do Arduino.
 
 ## Programação do Arduino Day 2014 em Belo Horizonte
 
- * Inicio as 8:00 - 1H  - Abertura com Thiago Munhoz (@ThiagoMunhoz)
- * 2H  - Mini Curso <a href="http://fb.me/HelloWorldArduino">Hello World Arduino</a> com Carlos Delfino (@CarlosDelfino)
- * 15M - intervalo - batepapo
- * 1H  - Palestra Daniel Furini - <a href="https://github.com/studiosoton/ghost-protocol">Ghost Protocol</a>
- * 1H  - Palestra Fritzing, desenhando suas próprias placas - Edwaldo
- * 1H  - Almoço
- * Parte da tarde oficinas, webconferências com outras instituiçòes, Sorteios finais.
- * Fechamento com webconferência mundial com Mazzimo Banzi.
- 
+ * 8:00 - Abertura Evento (Auditório Principal CAMPUS II) - Thiago
+ * 8:15 - Palestra "Hello World Arduino" (Auditório Principal CAMPUS II) - Carlos
+ * 9:30 - Palestra "Ghost Protocol" (Auditório Principal CAMPUS II) - Daniel
+ * 10:00 - Intervalo
+ * 10:15 - Palestra "Fritzing" (Auditório Principal CAMPUS II) - EdWaldo
+ * 10:45 - ShowRoom de aplicações e montagens com Arduino (Auditório Principal CAMPUS II)
+ * 11:55 - Encerramento das Palestras 
+ * 14:00 - Oficinas abertas: 
+  * #1 - Oficina xBee + Shields (Sala 209) - Carlos Delfino
+    Interessados deverão levar seus xBee
+	* #2 - Oficina DuinOS (RTOS com Arduino) Carlos Delfino
+	  Interessados deverão ter conhecimento avançado em Arduino, GCC e Eclipse, uso do GitHub
+
 ## Sorteios
 
 Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a lista, o sorteio será feito através de uma maquina de sorteio desenvolvida especialmente para o evento com um Arduino UNO, um LCD e um acelerometro, usando a função randon, e uma semente gerada pelo acelerometro, sabemos da limitação da biblioteca randon para AVR, e então apostamos na sua sorte para que seu volcher obtido no cadastro pelo link <a href="http://even.tc/ArduinoDay14BH">http://even.tc/ArduinoDay14BH</a> seja selecionado conforme sua sorte.
@@ -42,7 +40,6 @@ Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a 
  * 1 Arduino UNO - Doado pelo Claudio Olmedo do Arduino Paraguay. (os demais arduinos serão usados nas oficinas)
  * 2 Shields LCD - Doado pelo Claudio Olmedo do Arduino Paraguay. 
 
- 
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=56">02 - módulos transceiver 2,4GHZ - Doado pela Arduino Omega</a>
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=18&product_id=60">01 - Display Nokia 5110 - Doado pela Arduino Omega</a>
  * <a href="http://arduinomega.com.br/index.php?route=product/product&path=68&product_id=72">01 Par - Módulo RF 433MHZ(emissor + receptor) - Doado pela Arduino Omega</a>
@@ -54,6 +51,7 @@ Foram doados diversos itens que serão sorteados em nosso evento segue abaixo a 
  * <a href="http://www.arduinoomega.com.br">Arduino Omega</a>
  * <a href="">Claudio Olmedo - Arduino Paraguay</a>
  * <a href="">CEFET-MG</a>
+ * <a href="">IFPI - LABIRAS</a>
  * Outras organizações e anonimos que estão apoiando nosso projeto
 
 ===
