Novo site meados de 2018
O novo site feito com Jekyll basedado no template
affiliates-jekyll-theme

--- a/_posts/eventos/2014-03-14-Arduino-Day-2014.md
+++ b/_posts/eventos/2014-03-14-Arduino-Day-2014.md
@@ -4,7 +4,7 @@ title: Arduino Day 2014
 tags: [Eventos, Encontro, Arduino, ArduinoDay, Day, Aniverário]
 categories: [Eventos, ArduinoDay]
 excerpt: Arduino Day 2014, participe, comermore os 10 anos do Arduino!!!
-author: Carlos Delfino
+author: delfino
 ---
 <a href="http://day.arduinoday.cc">
   <img border="0" alt="Arduino Day 2014" align="left"
